Switch to Multiple Envs

--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 CYPRESS_BASE_URL=https://testing.datadios.com
-CYPRESS_USER_EMAIL=JyothsnaD@nfolksdata.com
-CYPRESS_USER_PASSWORD=nfolks@17
+CYPRESS_USER_EMAILE2E=JyothsnaD@nfolksdata.com
+CYPRESS_USER_PASSWORDE2E=nfolks@17
 CYPRESS_USER_TENANT_ID=NotPPhing
 
 CYPRESS_IMPORTDSFROMSYSTEMFILE=cypress/fixtures/Redshift-PG_meta.json
 
+CYPRESS_USER_EMAIL=endtoendtest@datadios.com
+CYPRESS_USER_PASSWORD=endtoend123456
+CYPRESS_WF=WF_DS2DS_20231017_132837
 
 CYPRESS_BASE_URL2=www.base.comiamindotenvfile
 CYPRESS_ping=123456789
