--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "Hello": "echo Hello World",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "Runtest": "npx cypress run --record --key a0c09ff5-ca84-4bec-b555-8e9bb48ca0ea -b \"chrome\" --spec \"./cypress/e2e/11. P18_POMdemo.cy.js\"",
-    "cy:run": "cypress run -b \"chrome\" --spec \"./cypress/e2e/11. P18_POMdemo.cy.js\"",
-    "JenkinsRun": "start-server-and-test start http://localhost:8080 cy:run"
+    "Runtest": "npx cypress run --record --key a0c09ff5-ca84-4bec-b555-8e9bb48ca0ea --headed -b \"chrome\" --spec \"./cypress/e2e/11. P18_POMdemo.cy.js\"",
+    "cy:run": "cypress run --headed -b \"chrome\" --spec \"./cypress/e2e/11. P18_POMdemo.cy.js\"",
+    "JenkinsRun": "start-server-and-test start http://localhost:8080 cy:run",
+    "cy:run:prod":"cypress run --env ENV=production --headed -b \"chrome\" --spec \"./cypress/e2e/30. SwitchConfigFiles&Env.cy.js\"",
+    //Use npm run cy:run:stg
+    "cy:run:stg":"cypress run --env ENV=staging --headed -b \"chrome\" --spec \"./cypress/e2e/30. SwitchConfigFiles&Env.cy.js\""
   },
   "keywords": [],
   "author": "",
