--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
+    "cy-verify-downloads": "^0.2.3",
     "cypress": "^13.1.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.6.1",
     "cypress-xpath": "^2.0.1",
+    "fs-extra": "^11.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0"
+    "mochawesome-report-generator": "^6.2.0",
+    "path": "^0.12.7"
   }
 }
